--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -286,6 +286,11 @@ hr {
     background-position: center;
     min-height: 250px;
 }
+.blog-img-5 {
+    background-image: url(../../assets/imgs/goimage.jpg);
+    background-size: cover;
+    background-position: center;
+    min-height: 250px; }
 .post-items {
     position: absolute;
     bottom: 5px;
