--- a/src/static/css/libs/_vars.scss
+++ b/src/static/css/libs/_vars.scss
@@ -33,8 +33,8 @@
 
 // Palette.
 	$palette: (
-		bg:							#181A1B,
-		bg-alt:						#181A1B,
+		bg:							#545b5f, // internal box color
+		bg-alt:						#3c4244, // page inline color
 		fg:							#f8f8f4,
 		fg-bold:					#f8f8f4,
 		fg-light:					#aaaaaa,
